dhall/tests/type-inference/failure/unit/RemovedBuiltinOptionalBuild.txt
Type error: error: unbound variable ``Optional/build``
 --> <current file>:1:1
  |
1 | Optional/build
  | ^^^^^^^^^^^^^^ not found in this scope
  |
